# presentations-module

./: .env.example  .gitignore  Makefile  main.py  presentations.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: presentations-checkpoint.ipynb
src/presentations/core/: chrome.py  presentation_document.py  presentation_task.py  progress_payload.py
src/presentations/database/: db.py
src/presentations/sources/: presentation_source.py  sokratic_source.py
src/presentations_module/: __init__.py
src/presentations_module/core/: presentation_document.py  presentation_task.py
src/presentations_module/database/: db.py
src/presentations_module/files/: __init__.py  file_storage.py  local_file_storage.py  s3_file_storage.py  sftp_file_storage.py
src/presentations_module/sources/: download_format.py  presentation_source.py  sokratic_source.py
tests/: conftest.py  test_integration_run.py  test_local_file_storage_basedir.py  test_s3_file_storage.py
