[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "presentations_module"
version = "0.1.0"
dependencies = [
  "playwright==1.57.0",
  "pymongo==4.16.0",
  "python-dotenv==1.2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
